syntax = "proto3";

option csharp_namespace = "Hospital.Grpc.Contracts";

package hospital;

// Сообщение с данными пациента 
message PatientResponse {
  string full_name = 1;
  int32 gender = 2;        
  string date_of_birth = 3; 
  string address = 4;
  int32 blood_type = 5;   
  int32 rh_factor = 6;    
  string phone_number = 7;
}

// Ответ от API о статусе обработки
message GenerationCallback {
  bool success = 1;
  string error = 2;
}

// Сервис генерации
service HospitalGenerator {
  // Двунаправленный стриминг:
  // Генератор шлет поток PatientResponse
  // API шлет в ответ поток GenerationCallback
  rpc StreamPatients (stream GenerationCallback) returns (stream PatientResponse);
}